@@ -7,6 +7,7 @@
 	* ctr-internal.h: Likewise.
 	* dsa-internal.h: Likewise.
 	* gost28147-internal.h: Likewise.
+	* poly1305-internal.h: Likewise.
 
 2020-11-26  Niels Möller  <nisse@lysator.liu.se>
 
